--- a/themes/newave/src/scss/partials/_navigation.scss
+++ b/themes/newave/src/scss/partials/_navigation.scss
@@ -17,7 +17,7 @@
     background-color: black;
     opacity: .64;
     transition: all $menTran ease-in-out;
-    z-index: 101;
+    z-index: 103;
   }
 }
 
@@ -29,7 +29,7 @@
   height: 100%;
   background-color: rgba(24, 27, 43, 1);
   opacity: .78;
-  z-index: 102;
+  z-index: 105;
   font-family: 'Josefin Sans', sans-serif;
   transition: transform $menTran ease-in-out;
 
